--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/swagger": "^6.3.0",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
+    "ioredis": "^5.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuid": "^9.0.0"
