--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@nestjs/websockets": "^9.4.2",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "ioredis": "^5.3.2",
