--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.2",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/websockets": "^9.4.2",
     "class-validator": "^0.14.0",
