--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ioredis": "^5.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.6.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
